<resources>
    <string name="app_name">launcher4</string>
    <string name="slide_search">Search</string>
    <string name="slide_source">Sources</string>
    <string name="slide_trending">Trending</string>
    <string name="slide_my_app">My Apps</string>
    <string name="slide_app_store">App Store</string>
    <string name="slide_on_demand">On Demand</string>
    <string name="slide_settings">Settings</string>

    <string name="search_back">BACK</string>
    <string name="key_123" translatable="false">123</string>


    <string name="menu_installed">Installed Apps</string>
    <string name="menu_recent_used">Recently Used Apps</string>
    <string name="menu_explore">Explore the App Store</string>
    <string name="menu_new_app">New Apps</string>
    <string name="menu_demand_categories">On Demand Categories</string>

    <string name="item_view_all">View all</string>
    <string name="item_store_banner" translatable="false">App\nStore</string>
    <string name="search_tips">Please enter at least 3 characters</string>
    <string name="search_title_apps">Apps matching </string>
    <string name="search_title_demand">On Demand matching </string>
    <string name="search_title">Search</string>

    <string name="source_air">AIR</string>
    <string name="source_cable" translatable="false">CABLE</string>

    <string name="source_hdmi1" translatable="false">HDMI1</string>
    <string name="source_hdmi2" translatable="false">HDMI2</string>
    <string name="source_hdmi3" translatable="false">HDMI3</string>
    <string name="source_usb" translatable="false">USB</string>
    <string name="source_av" translatable="false">AV</string>
    <string name="source_vga" translatable="false">VGA</string>
    <string name="source_Ypbpr" translatable="false">YPBPR</string>

    <string name="epg_now">Now</string>
    <string name="epg_colon" translatable="false">:</string>

    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok" translatable="false">OK</string>

    <string name="dialog_delete_msg">Do you really want to delete </string>
    <string name="dialog_delete_system_msg">System app can not be deleted</string>
    <string name="tips_menu">Press “Menu” to move or delete this app</string>
    <string name="tips_move">Press “LEFT” or “RIGHT” to move, “OK” to confirm</string>
    <string name="tips_no_result">No results for</string>
    <string name="menu_recommended_movie">Recommended Movie</string>
</resources>
