<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clipChildren="false"
    android:clipToPadding="false">


    <com.mp3.launcher4.customs.views.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/search_tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/search_tips"
        android:textColor="@color/colorSearchHint"
        android:textSize="23.4sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/search_result_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="155dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/search_demand_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/search_title_demand"
            android:textColor="#fff"
            android:textSize="26.6sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_demand_rv"
            style="@style/SearchRecycler"
            android:layout_height="270dp" />

        <TextView
            android:id="@+id/search_app_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title_apps"
            android:textColor="#fff"
            android:textSize="26.6sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_apps_rv"
            style="@style/SearchRecycler"
            android:layout_height="190dp" />
    </LinearLayout>

    <com.mp3.launcher4.customs.views.indicators.AVLoadingIndicatorView
        android:id="@+id/search_indicator"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />

</RelativeLayout>
